Ajout make trivy (check vulnerabilities) + update vulnerable dependencies + corrections warning de build